setting_files/jenkins.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    openshift.io/generated-by: OpenShiftNewApp
    openshift.io/host.generated: "true"
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  creationTimestamp: 2018-08-04T09:37:25Z
  labels:
    app: jenkins-persistent
    template: jenkins-persistent-template
  name: jenkins
  namespace: 3890-jenkins
  resourceVersion: "29282851"
  selfLink: /apis/route.openshift.io/v1/namespaces/3890-jenkins/routes/jenkins
  uid: ff0fca27-97c9-11e8-9a19-0220bffb280e
spec:
  host: jenkins-3890-jenkins.apps.na39.openshift.opentlc.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-08-04T09:37:25Z
      status: "True"
      type: Admitted
    host: jenkins-3890-jenkins.apps.na39.openshift.opentlc.com
    routerName: router
    wildcardPolicy: None
